# familiar

./: .gitignore  .gitmodules  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md
poppet/: .gitignore  BUILD.md  CMakeLists.txt  README.md  fetch_repos.py  partitions.csv  repos.json  scan_secrets.py  sdkconfig.defaults
poppet/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
poppet/main/apps/: apps.h
poppet/main/apps/app_launcher/: app_launcher.cpp
poppet/main/apps/app_setup/: app_setup.cpp  app_setup.h
poppet/main/apps/common/: common.h
poppet/main/assets/familiars/: gen_familiars.py
poppet/main/hal/: hal.cpp  hal.h  hal_ble.cpp  hal_espnow.cpp  hal_head_touch.cpp  hal_mcp.cpp  hal_network.cpp  hal_servo.cpp  hal_ws_avatar.cpp
poppet/main/hal/board/: config.h  cores3_audio_codec.cc  stackchan.cc  stackchan_camera.cc  stackchan_camera.h  stackchan_display.cc  stackchan_display.h
poppet/main/stackchan/: modifiable.h  sound_localizer.cpp  sound_localizer.h  stackchan.h
poppet/main/stackchan/animation/: animation.cpp
poppet/main/stackchan/camera/: camera_stream_guard.cpp  camera_stream_guard.h
poppet/main/stackchan/face/: camera_arbiter.cpp  camera_arbiter.h  face_detection_result.cpp  face_detection_result.h  face_detector.cpp  face_detector.h
poppet/main/stackchan/json/: json_helper.cpp
poppet/main/stackchan/modes/: state_manager.cpp  state_manager.h
poppet/main/stackchan/modifiers/: blink.h  breath.h  face_tracking.cpp  face_tracking.h  head_pet.cpp  imu.h  (+6 more)
poppet/patches/: afe_wake_word-mutex-fix.patch  xiaozhi-esp32.patch
(+184 files in other folders)
